add: add Text component

--- a/src/shared/styles/_colors.scss
+++ b/src/shared/styles/_colors.scss
@@ -2,3 +2,8 @@
 $tabBackground: rgba(187, 187, 187, 1);
 $active-tabBackground: rgba(239, 239, 239, 1);
 
+// Text colors
+$basic-menu: rgba(85, 85, 85, 1);
+$basic-grafics: rgba(85, 85, 85, 1);
+$common: rgba(85, 85, 85, 1);
+$systemic: rgba(167, 167, 167, 1);
