--- a/src/shared/styles/_fonts.scss
+++ b/src/shared/styles/_fonts.scss
@@ -1,8 +1,17 @@
 @font-face {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat-500';
   src: local('Montserrat'),
-      url('fonts/Montserrat-Bold.ttf') format('truetype'),
-      url('fonts/Montserrat-SemiBold.ttf') format('truetype'),
-      url('fonts/Montserrat-Medium.ttf') format('truetype');
-  font-weight: 500;
+       url('fonts/Montserrat-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat-600';
+  src: local('Montserrat'),
+       url('fonts/Montserrat-SemiBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Montserrat-700';
+  src: local('Montserrat'),
+       url('fonts/Montserrat-Bold.ttf') format('truetype');
 }
