add: add Chart component UI example

--- a/src/shared/styles/_colors.scss
+++ b/src/shared/styles/_colors.scss
@@ -7,3 +7,7 @@ $basic-menu: rgba(85, 85, 85, 1);
 $basic-grafics: rgba(85, 85, 85, 1);
 $common: rgba(85, 85, 85, 1);
 $systemic: rgba(167, 167, 167, 1);
+
+// Main colors
+$main-accent: rgba(127, 199, 255, 0.2);
+$second-accent: rgba(100, 149, 237, 1);
