--- a/src/shared/ui/atoms/Text/styles.module.scss
+++ b/src/shared/ui/atoms/Text/styles.module.scss
@@ -11,7 +11,7 @@
     color: $basic-menu;
   }
 
-  &-grafics {
+  &-graphics {
     font-family: 'Montserrat-700', sans-serif;
     font-size: 2.25rem;
     font-weight: 700;
